@@ -1,5 +1,9 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'idea'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
+}
 
 // This is optional, tells gradle that we want Java 11 compatible bytecode.
 // Can be removed in standalone addons
@@ -9,7 +13,7 @@ targetCompatibility = JavaVersion.VERSION_11
 repositories {
     mavenCentral()
     maven {
-        url "https://maven.bookmap.com/maven2/develop/"
+        url "https://maven.bookmap.com/maven2/releases/"
     }
 }
 
@@ -19,8 +23,8 @@ dependencies {
         implementation project(':Level1Api')
         implementation project(':SimplifiedApiWrapper')
     } else {
-        compileOnly group: 'com.bookmap.api', name: 'api-core', version: '7.3.1.8c12a91a61';
-        compileOnly group: 'com.bookmap.api', name: 'api-simplified', version: '7.3.1.8c12a91a61';
+        compileOnly group: 'com.bookmap.api', name: 'api-core', version: '7.4.0.3'
+        compileOnly group: 'com.bookmap.api', name: 'api-simplified', version: '7.4.0.3'
 
         compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     }
@@ -31,3 +35,32 @@ jar {
 }
 
 eclipse.classpath.downloadJavadoc = true
+idea.module.downloadJavadoc = true
+
+if(idea.project) {
+    // Create 'BookmapJar' run configuration for IntelliJ
+    idea.project.settings.runConfigurations {
+        def addOpensOptions = '--add-opens=java.base/java.lang=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.io=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.math=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.util=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.net=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.text=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt.color=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED\n' +
+                '--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED'
+        if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
+            addOpensOptions += '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED\n'
+        }
+
+        'BookmapJar'(org.jetbrains.gradle.ext.JarApplication) {
+            // Change the path to Bookmap.jar here if you changed the default installation directory
+            jarPath = 'C:\\Program Files\\Bookmap\\Bookmap.jar'
+            workingDirectory = 'C:\\Bookmap'
+            jvmArgs = addOpensOptions
+        }
+    }
+}
